appId: host.exp.Exponent
name: "Feature 1 - Show Both Campuses"
---
- launchApp:
  clearState: "true" # ensures that each test starts with a clean slate for better performance
# Feature 1.1 - Show Both Campuses
#- setLocation:
#   latitude: 45.497660
#  longitude: -73.579162
- assertVisible:
    id: "map-view"
- assertVisible: "Where to?"
- assertVisible:
    id: "campus-button"
    enabled: true
- assertVisible:
    text: "Outdoor"
    enabled: true
- assertVisible:
    text: "Indoor"
    enabled: true
- assertVisible:
    id: "locate-button"
- assertVisible:
    id: "zoom-in-button"
- assertVisible:
    id: "zoom-out-button"
# Feature 1.3 - Toggle between campuses
- tapOn:
    id: "campus-button"
- assertVisible:
    id: "map-view"
- assertVisible: "LOY"
- assertVisible: "Where to?"
- assertVisible:
    id: "campus-button"
    enabled: true
- assertVisible:
    text: "Outdoor"
    enabled: true
- assertVisible:
    text: "Indoor"
    enabled: true
#[Deprecated]- assertVisible: "My Location"
- doubleTapOn: # zoom in on map to show markers
    id: "map-view"
- tapOn:
    id: "zoom-in-button"
# Feature 1.5 - Show Info About Buildings
- tapOn: "PY"
- assertVisible: "Psychology Building"
- assertVisible: "PY"
- assertVisible: "7141 Sherbrooke W."
- assertVisible: "Campus: LOY"
- assertVisible: "Parking"
- assertVisible: "Accessible"
- assertVisible: "ATM"
- assertVisible: "Get Directions"
- assertVisible: ""
- tapOn: "" # close building info popup
# Feature 1.3 - Toggle Between Campuses
- tapOn:
    id: "campus-button"
- assertVisible: "SGW"
# Feature 1.5 - Show Info About Buildings
- doubleTapOn: # zoom in on map to show markers
    id: "map-view"
- tapOn:
    id: "zoom-in-button"
- tapOn: "ER"
- assertVisible: "ER Building"
- assertVisible: "ER"
- assertVisible: "2155 Guy St."
- assertVisible: "Campus: SGW"
- assertVisible: "Parking"
- assertVisible: "Accessible"
- assertVisible: "ATM"
- assertVisible: "Get Directions"
- assertVisible: ""
- tapOn: "" # close building info popup
- tapOn: "Google Map" # to make sure marker is not selected anymore
