appId: host.exp.Exponent
name: "Feature 2.1 & 2.5 - Bike"
---
- launchApp:
  clearState: "true" # ensures that each test starts with a clean slate for better performance
# starting state: map view zoomed in twice
- tapOn: "ER" # tap on building marker - goal is to test another marker
# open info popup
- tapOn: "Get Directions"
- tapOn: "Set as Destination"
- tapOn: "Bike" # select bike navigation
# choose destination
- tapOn: "Destination Address"
- assertVisible: "Choose destination"
# select destination by scrolling to building name
- scrollUntilVisible:
    element:
      text: "John Molson Building"
    timeout: 50000
- tapOn: "John Molson Building"
# check to see if page renders correctly
- assertVisible: "1450 Guy"
- runFlow:
    when:
      visible: "Google Map"
    file: ./subflows/assert_render_navigation_screen.yaml
- assertVisible: "Start Navigation"
##[Deprecated]- assertVisible: "My Location"
- assertVisible: "MB"
- assertVisible: "1 minute"
- assertVisible: "0.29 km"
# start navigation
- tapOn: "Start Navigation"
- assertVisible: "Google Map"
- assertVisible: "Preview"
- assertVisible: "Exit"
# check that exit button works
- tapOn: "Exit"
# check to see if page renders correctly
- assertVisible: "1450 Guy"
- runFlow:
    when:
      visible: "Google Map"
    file: ./subflows/assert_render_navigation_screen.yaml
#[Deprecated]- assertVisible: "My Location"
- assertVisible: "Start Navigation"
- assertVisible: "MB"
- assertVisible: "1 minute"
- assertVisible: "0.29 km"
# start navigation flow
- tapOn: "Start Navigation"
- assertVisible: "Preview"
- assertVisible: "Exit"
# see directions and assert page renders correctly
- tapOn: "Preview"
- assertVisible: "Directions"
- assertVisible: "Head northeast"
- assertVisible: "Turn left"
- assertVisible: "Turn right"
- assertVisible: "Arrive at your destination, on the left"
# exit direction page
- tapOn: "←"
# exit navigation
- tapOn: "Exit"
- assertVisible: "Google Map"
# leave navigation map
- tapOn: "←"
# close info popup
- tapOn: ""
