appId: host.exp.Exponent
name: "Feature 2.1 & 2.5 - Bus"
---
- launchApp:
  clearState: "true" # ensures that each test starts with a clean slate for better performance
# starting state: map view - with markers visible
- tapOn: "CL" # tap on building marker - goal is to test another marker
# open info popup
- tapOn: "Get Directions"
- tapOn: "Set as Destination"
# choose destination
- tapOn: "Destination Address"
- tapOn: "Choose destination"
# select destination by typing part of building name
- inputText:
    text: "Jesuit"
    into: "Where to?"
# assert that there are two buildings container
- assertVisible: "Loyola Jesuit Hall and Conference Centre"
- assertVisible:
    text: "7141 Sherbrooke W."
    index: 1
- assertVisible: "Jesuit Residence"
# select desired building from list
- tapOn: "Loyola Jesuit Hall and Conference Centre"
# check to see if page renders correctly
- tapOn: "Bus" # select bus navigation
- runFlow:
    when:
      visible: "Google Map"
    file: ./subflows/assert_render_navigation_screen.yaml
- assertVisible: "7141 Sherbrooke W."
#[Deprecated]- assertVisible: "My Location"
- assertVisible: "RF"
# start navigation
- tapOn: "Start Navigation"
- assertVisible: "↑"
- assertVisible: "Google Map"
- assertVisible: "Preview"
- assertVisible: "Exit"
# check that exit button works
- tapOn: "Exit"
# check to see if page renders correctly
- runFlow:
    when:
      visible: "Google Map"
    file: ./subflows/assert_render_navigation_screen.yaml
- assertVisible: "Start Navigation"
- assertVisible: "7141 Sherbrooke W."
#[Deprecated]- assertVisible: "My Location"
- assertVisible: "RF"
# start navigation flow
- tapOn: "Start Navigation"
- assertVisible: "Preview"
- assertVisible: "Exit"
# see directions and assert page renders correctly
- tapOn: "Preview"
- assertVisible: "Directions"
- scrollUntilVisible:
    element:
      text: "Arrived at destination"
    timeout: 50000
# exit direction page
- tapOn: "←"
# exit navigation
- tapOn: "Exit"
- assertVisible: "Google Map"
# leave navigation map
- tapOn: "←"
# close info popup
- tapOn: ""
- tapOn:
    id: "clear-search-button" #make sure to clear the search for setting up next test
- assertVisible:
    id: "map-view"
- assertVisible:
    id: "zoom-in-button"
- tapOn:
    id: "zoom-in-button"
- tapOn:
    id: "zoom-in-button"
