appId: host.exp.Exponent
name: "Feature 2.1 & 2.5 - Car"
---
- launchApp:
  clearState: "true" # ensures that each test starts with a clean slate for better performance
# starting state: map view - with markers visible
- tapOn: "MB" # tap on building marker - goal is to test another marker
# open info popup
- tapOn: "Get Directions"
- tapOn: "Set as Destination"
# choose destination
- tapOn: "Destination Address"
- tapOn: "Choose destination"
# select destination by typing part of building name
- inputText:
    text: "Per"
    into: "Where to?"
# assert building is visible
- assertVisible: "PERFORM Centre"
# select desired building from list
- tapOn: "PERFORM Centre"
# check to see if page renders correctly
- assertVisible: "7200 Sherbrooke St. W."
- tapOn: "Car" #select car navigation
- runFlow:
    when:
      visible: "Google Map"
    file: ./subflows/assert_render_navigation_screen.yaml
- assertVisible: "Start Navigation"
#[Deprecated]- assertVisible: "My Location"
- assertVisible: "PC"
- assertVisible: "16 minutes"
- assertVisible: "7.61 km"
# start navigation
- tapOn: "Start Navigation"
- assertVisible: "Google Map"
- assertVisible: "Preview"
- assertVisible: "Exit"
# check that exit button works
- tapOn: "Exit"
# check to see if page renders correctly
- runFlow:
    when:
      visible: "Google Map"
    file: ./subflows/assert_render_navigation_screen.yaml
- assertVisible: "7200 Sherbrooke St. W."
#[Deprecated]- assertVisible: "My Location"
- assertVisible: "Start Navigation"
- assertVisible: "PC"
- assertVisible: "16 minutes"
- assertVisible: "7.61 km"
# start navigation flow
- tapOn: "Start Navigation"
- assertVisible: "Preview"
- assertVisible: "Exit"
# see directions and assert page renders correctly
- tapOn: "Preview"
- assertVisible: "Directions"
- assertVisible: "Turn right"
- assertVisible: "Keep right"
# exit direction page
- tapOn: "←"
# exit navigation
- tapOn: "Exit"
- assertVisible: "Google Map"
# leave navigation map
- tapOn: "←"
# close info popup
- tapOn: ""
- tapOn:
    id: "clear-search-button" #make sure to clear the search for setting up next test
- assertVisible:
    id: "map-view"
- assertVisible:
    id: "zoom-in-button"
- tapOn:
    id: "zoom-in-button"
- tapOn:
    id: "zoom-in-button"