appId: host.exp.Exponent
name: "Feature 5: Outdoor Points of Interest"
---
- launchApp:
  clearState: "true" # ensures that each test starts with a clean slate for better performance
# start test after feature 2 tests
# check to see if page renders correctly
- runFlow:
    when:
      visible: "Google Map"
    file: ./subflows/assert_render_mapview_screen.yaml
  # choose another point of interest
- tapOn: "Where to?"
- tapOn: "Choose destination"
# search for known nearby medical clinic
- inputText:
    text: "Med"
    into: "Choose destination"
- tapOn: "Clinic Medic Elle, 1980 Sherbrooke St W Bureau 700, Montreal, QC H3H 1E8, Canada"
# assert popup is visible
- assertVisible:
    text: "Clinic Medic Elle"
    index: 1
- assertVisible: "1980 Sherbrooke St W Bureau 700, Montreal, QC H3H 1E8, Canada"
- assertVisible: "Campus: SGW"
- assertVisible:
    id: "get-directions-button"
    id: "get-directions-button"
- tapOn: "Set as Destination"
# check to see if nav page renders correctly
- runFlow:
    when:
      visible: "Google Map"
    file: ./subflows/assert_render_navigation_screen.yaml
- assertVisible: "Preview"
- tapOn: "Preview"
- assertVisible: "Directions"
- assertVisible: "Turn left"
- assertVisible: "Turn right"
# exit direction page
- tapOn: "←"
- tapOn: "Start Navigation"
- assertVisible: "Preview"
- assertVisible: "Exit"
# see directions and assert page renders correctly
- tapOn: "Preview"
- assertVisible: "Directions"
- assertVisible: "Turn left"
- assertVisible: "Turn right"
# exit direction page
- tapOn: "←"
# exit navigation
- tapOn: "Exit"
- tapOn: "←"
# close popup
- tapOn: ""
- tapOn:
    id: "clear-search-button"
# switch campus
- tapOn:
    id: "campus-button"
# check to see if page renders correctly
- runFlow:
    when:
      visible: "Google Map"
    file: ./subflows/assert_render_mapview_screen.yaml
- tapOn: "Where to?"
- tapOn: "Choose destination"
# search for a nearby restaurant
- inputText:
    text: "Tim"
    into: "Choose destination"
# select destination by scrolling to building name - to make sure the keyboard doesn't hide the element
- scrollUntilVisible:
    element:
      text: "Tim Hortons, 6495 Rue Saint-Jacques, Montreal, QC H4B 1V1, Canada"
    timeout: 50000
- tapOn: "Tim Hortons, 6495 Rue Saint-Jacques, Montreal, QC H4B 1V1, Canada"
# assert popup is visible
- assertVisible: "Tim Hortons"
- assertVisible: "6495 Rue Saint-Jacques, Montreal, QC H4B 1V1, Canada"
- assertVisible: "Campus: LOY"
- assertVisible:
    id: "get-directions-button"
- tapOn:
    id: "get-directions-button"
- tapOn: "Set as Destination"
# check to see if page renders correctly
- runFlow:
    when:
      visible: "Google Map"
    file: ./subflows/assert_render_navigation_screen.yaml
- assertVisible: "Preview"
- tapOn: "Preview"
- assertVisible: "Directions"
- assertVisible: "Turn left"
- assertVisible: "Turn right"
- scroll
- scroll
# exit direction page
- tapOn: "←"
- tapOn: "Start Navigation"
- assertVisible: "Preview"
- assertVisible: "Exit"
# see directions and assert page renders correctly
- tapOn: "Preview"
- assertVisible: "Directions"
- assertVisible: "Turn left"
- assertVisible: "Turn right"
# exit direction page
- tapOn: "←"
# exit navigation
- tapOn: "Exit"
- tapOn: "←"
# close popup
- tapOn: ""
